More fixes to vertical spacing

--- a/templates/scss/modules/_blocks.scss
+++ b/templates/scss/modules/_blocks.scss
@@ -50,6 +50,6 @@ $maxPageWidth: 1400px;
 
 .pullup {
   position: relative;
-  top: - ms(4);
-  margin-bottom: - ms(4);
+  top: - ms(3);
+  margin-bottom: - ms(3);
 }
