--- a/templates/scss/modules/_okb.scss
+++ b/templates/scss/modules/_okb.scss
@@ -59,8 +59,6 @@
     margin-top: 0
   };
   position: relative;
-  top: - ms(1);
-  margin-bottom: - ms(1);
 }
 
 .okb-panel {
